--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "click>=8.0",
     "rich>=12.0",
     "jinja2>=3.0",
+    "pytest-timeout>=2.4.0",
 ]
 
 [project.optional-dependencies]
